--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 .right{
     width: 60%;
-    background-color: bisque;
+    background-image: url(../img/mine.jpg);
     height: 100%;
 }
 .top-contact{
@@ -45,4 +45,9 @@ i{
 .user img{
     width: 10%;
     border-radius: 50%;
+}
+.toolbar{
+    height: 50px;
+    width: 100%;
+    background-color: #EAEAEA;
 }
