--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,20 @@ i{
 }
 .sent{
     background-color: #e1ffc7;
-    width: 250px;
+    min-width: 250px;
     padding: 10px;
     border-radius: 10px;
 }
 .received{
     background-color: white;
-    width: 250px;
+    min-width: 250px;
     padding: 10px;
     border-radius: 10px;
+}
+.chatclock{
+    font-size: 10px;
+    color: lightslategray;
+}
+.toolbar i{
+    font-size: 1.5rem;
 }
