--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 .debug{
     border: 1px solid red;
 }
+
+/* wrapper section */
 .wrapper{
     background-color: white;
     height: calc(100vh - 4rem);
@@ -20,6 +22,8 @@
     background-image: url(../img/mine.jpg);
     height: 100%;
 }
+
+/* account details section */
 .top-contact{
     height: 50px;
     width: 100%;
@@ -27,12 +31,13 @@
 }
 .top-contact img{
     border-radius: 50%;
-    width: 10%;
+    width: 40px;
 }
 .top-contact i{
     padding: 10px;
     font-size: 1.3rem;
 }
+/* enable new message notification section */
 .notifications{
     background-color: #8EDAFC;
     height: 80px;
@@ -42,9 +47,13 @@
     font-size: 1.3rem;
     padding: 5px; 
 }
+
+/* search bar section */
 .searchbar{
     height:50px;
 }
+
+/* chat list section */
 .user img{
     width: 10%;
     border-radius: 50%;
@@ -53,6 +62,11 @@
     overflow-y: scroll;
     height: calc(100% - 180px);
 }
+.activechat{
+    background-color: lightgray;
+}
+
+/* main chat section */
 .toolbar{
     height: 50px;
     width: 100%;
@@ -80,4 +94,7 @@
 }
 .toolbar i{
     font-size: 1.5rem;
+}
+.lastaccess{
+    font-size: 0.8rem;
 }
